[package]
name = "tuic-client"
version = "1.0.0"
authors = ["EAimTY <ea.imty@gmail.com>"]
description = "Minimalistic TUIC client implementation as a reference"
categories = ["network-programming"]
keywords = ["network", "proxy", "quic", "tuic"]
edition = "2021"
rust-version = "1.77.2"
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/EAimTY/tuic"

[dependencies]
bytes = { version = "1.6.0", default-features = false, features = ["std"] }
async-trait = { version = "0.1.80", default-features = false }
crossbeam-utils = { version = "0.8.19", default-features = false, features = ["std"] }
env_logger = { version = "0.11.3", default-features = false, features = ["humantime"] }
humantime = { version = "2.1.0", default-features = false }
lexopt = { version = "0.3.0", default-features = false }
log = { version = "0.4.21", default-features = false, features = ["serde", "std"] }
once_cell = { version = "1.19.0", default-features = false, features = ["parking_lot", "std"] }
parking_lot = { version = "0.12.1", default-features = false, features = ["send_guard"] }
quinn = { version = "0.10.2", default-features = false, features = ["futures-io", "runtime-tokio", "tls-rustls"] }
register-count = { version = "0.1.0", default-features = false, features = ["std"] }
rustls = { version = "0.21.10", default-features = false, features = ["quic"] }
rustls-native-certs = { version = "0.6.3", default-features = false }
rustls-pemfile = { version = "1.0.4", default-features = false }
serde = { version = "1.0.197", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.115", default-features = false, features = ["std"] }
socket2 = { version = "0.5.6", default-features = false }
socks5-proto = { version = "0.4.1", default-features = false }
socks5-server = { version = "0.10.1", default-features = false }
thiserror = { version = "1.0.58", default-features = false }
tokio = { version = "1.37.0", default-features = false, features = ["io-util", "macros", "net", "parking_lot", "rt-multi-thread", "time"] }
tokio-util = { version = "0.7.10", default-features = false, features = ["compat"] }
tuic = { path = "../tuic", default-features = false }
tuic-quinn = { path = "../tuic-quinn", default-features = false }
uuid = { version = "1.8.0", default-features = false, features = ["serde", "std"] }
