[package]
name = "tuic-server"
version = "1.0.1"
authors = ["EAimTY <ea.imty@gmail.com>"]
description = "Minimalistic TUIC server implementation as a reference"
categories = ["network-programming"]
keywords = ["network", "proxy", "quic", "tuic"]
edition = "2021"
rust-version = "1.78"
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/EAimTY/tuic"

[dependencies]
bytes = { version = "1.6.0", default-features = false, features = ["std"] }
crossbeam-utils = { version = "0.8.19", default-features = false, features = ["std"] }
env_logger = { version = "0.11.3", default-features = false, features = ["humantime"] }
humantime = { version = "2.1.0", default-features = false }
lexopt = { version = "0.3.0", default-features = false }
log = { version = "0.4.21", default-features = false, features = ["serde", "std"] }
parking_lot = { version = "0.12.2", default-features = false }
quinn = { version = "0.11.0", default-features = false, features = ["futures-io", "runtime-tokio", "rustls"] }
rustls = { version = "0.23.5", default-features = false }
rustls-pemfile = { version = "2.1.2", default-features = false }
register-count = { version = "0.1.0", default-features = false, features = ["std"] }
serde = { version = "1.0.201", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.117", default-features = false, features = ["std"] }
socket2 = { version = "0.5.7", default-features = false }
thiserror = { version = "1.0.60", default-features = false }
tokio = { version = "1.37.0", default-features = false, features = ["io-util", "macros", "net", "parking_lot", "rt-multi-thread", "time"] }
tokio-util = { version = "0.7.11", default-features = false, features = ["compat"] }
tuic = { path = "../tuic", default-features = false }
tuic-quinn = { path = "../tuic-quinn", default-features = false }
uuid = { version = "1.8.0", default-features = false, features = ["serde", "std"] }
